--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "WULFERS-AWESUMZ-BOT",
-  "version": "0.1",
+  "version": "0.0.1",
   "description": "WULFERS AWESUMZ BOT DIDNT YOU READ THE TITLE?",
   "main": "bot.js",
   "author": "inconsiderate & cim",
   "dependencies": {
+    "better-sqlite3": "^6.0.1",
     "discord.js": "^11.5.1",
-    "dotenv": "^8.2.0"
+    "node-gyp": "^6.1.0"
+  },
+  "scripts": {
+    "start": "node bot.js"
   }
 }
