--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "better-sqlite3": "^6.0.1",
     "discord.js": "^11.5.1",
+    "moment": "^2.24.0",
     "node-gyp": "^6.1.0"
   },
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "restart": "rm wolf-game.sqlite && node bot.js"
   }
 }
