fix some extraneous stuff

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "NjY5ODA4MDU1MTk3NjMwNDg0.XilVSg.ZPs5mVVvx0DG06tXjeQB5jjCxNQ",
+    "token": "NjgyMzU3MDgyMTI4Nzc3MzEw.XlcWSw.8xOEJy-c9tTu7bntEGXD95ZKopY",
     "prefix": "!"
 }
