--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "token": "NjgyMzU3MDgyMTI4Nzc3MzEw.XlcWSw.8xOEJy-c9tTu7bntEGXD95ZKopY",
-    "prefix": "!"
+    "prefix": "!",
+    "a thing":"b"
 }
