--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.1",
   "description": "WULFERS AWESUMZ BOT DIDNT YOU READ THE TITLE?",
   "main": "bot.js",
-  "author": "inconsiderate & cim",
+  "author": "inconsiderate & cim & Ram",
   "dependencies": {
     "better-sqlite3": "^6.0.1",
     "discord.js": "^11.5.1",
     "moment": "^2.24.0",
-    "node-gyp": "^6.1.0"
+    "node-gyp": "^6.1.0",
+    "pm2": "^4.2.3"
   },
   "scripts": {
-    "start": "node bot.js",
-    "restart": "rm wolf-game.sqlite && node bot.js"
+    "start": "node start.js",
+    "restart": "node restart.js",
+    "stop": "pm2 delete WULFERS-AWESUMZ-BOT"
   }
 }
