--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "bot.js",
   "author": "inconsiderate & cim & Ram",
   "dependencies": {
-    "better-sqlite3": "^6.0.1",
     "discord.js": "^11.5.1",
     "jimp": "^0.9.3",
     "moment": "^2.24.0",
     "node-gyp": "^6.1.0",
-    "pm2": "^4.2.3"
+    "pm2": "^4.2.3",
+    "sequelize": "^5.21.5",
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1"
   },
   "scripts": {
     "start": "node start.js",
