--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pm2": "^4.2.3",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
+    "sequelize-fixtures": "^1.1.1",
     "sqlite3": "^4.1.1"
   },
   "scripts": {
